# NonadditivityAnalysis

./: .bumpversion.cfg  ABL-Kinase-Ki_ChEMBL.txt  LICENSE  MANIFEST.in  Nonadditivity_Analysis.py  Orexin2_Actelion.txt  README.md  setup.cfg  tox.ini
example/: hERG_ChEMBL.txt
src/nonadditivity/: __main__.py  api.py  cli.py
