##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = nonadditivity
version = 1.0.0
description = A program to find key complex patterns in SAR data
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    pillow
    # Scientific python stack
    scipy
    numpy
    # Cheminformatics tools
    mmpdb

zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
