##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = nonadditivity
version = 1.0.0
description = A program to find key complex patterns in SAR data
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/KramerChristian/NonadditivityAnalysis
download_url = https://github.com/KramerChristian/NonadditivityAnalysis/releases
project_urls =
    Bug Tracker = https://github.com/KramerChristian/NonadditivityAnalysis/issues
    Source Code = https://github.com/KramerChristian/NonadditivityAnalysis

# Author information
author = Christian Kramer
author_email = Christian.Kramer@roche.com
maintainer = Christian Kramer
maintainer_email = Christian.Kramer@roche.com

# License Information
license = BSD
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    SAR
    Cheminformatics
    MMP
    RDKit

[options]
install_requires =
    pillow
    # Scientific python stack
    scipy
    numpy
    # Cheminformatics tools
    mmpdb

zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    nonadditivity = nonadditivity.cli:main